fixes the grid to prevent overlap

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  grid-template-rows: 20% auto 50px;
+  grid-template-rows: auto auto 50px;
   grid-template-columns: 1;
   height: 100%;
 
@@ -16,7 +16,7 @@
 
 .content {
   grid-row-start: 2;
-  grid-row-end: span 2;
+  grid-row-end: span 1;
   grid-column-start: 1;
   grid-column-end: span 1;
   text-align: center;
@@ -24,7 +24,8 @@
 
 .search-bar {
   font-size: 24px;
-  width: 400px;
+  width: 80%;
+  max-width: 350px;
   height: 50px;
   text-align: center;
 }
