--- a/src/components/ResultsContainer/Result.css
+++ b/src/components/ResultsContainer/Result.css
@@ -4,7 +4,8 @@
   border-style: solid;
   border-width: 1px;
   border-color: gray;
-  max-width: 400px;
+  width: 80%;
+  max-width: 350px;
   line-height: 50px;
 }
 
