--- a/src/components/ResultsContainer/ResultDetail/ResultDetail.css
+++ b/src/components/ResultsContainer/ResultDetail/ResultDetail.css
@@ -1,5 +1,6 @@
 .result-detail {
   margin: 20px auto 10px auto;
+  width: 80%;
   max-width: 800px;
   text-align: left;
 }
